<?xml version="1.0"?>
<package format="2">
  <name>laser_mapping</name>
  <version>0.0.0</version>
  <description>The laser_mapping package</description>

  <maintainer email="aosmunds@mit.edu">Alan Osmundson</maintainer>

  <license>TODO</license>

  <depend>pcl_ros</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
